--- a/repositories.html
+++ b/repositories.html
@@ -170,6 +170,22 @@ aside {
 
 <p>Some questions to consider: How does time-of-day correlate with <a href="javascript:filter([null, [100, 150], null, null])">arrival delay</a>? Are <a href="javascript:filter([null, null, [1700, 2000], null])">longer</a> or <a href="javascript:filter([null, null, [0, 300], null])">shorter</a> flights more likely to arrive early? What happened on <a href="javascript:filter([null, [80, 150], null, [new Date(2001, 0, 12), new Date(2001, 0, 13)]])">January 12</a>? How do flight patterns differ between <a href="javascript:filter([null, null, null, [new Date(2001, 0, 27), new Date(2001, 0, 29)]])">weekends</a> and <a href="javascript:filter([null, null, null, [new Date(2001, 0, 29), new Date(2001, 1, 3)]])">weekdays</a>, or <a href="javascript:filter([[4, 7], null, null, null])">mornings</a> and <a href="javascript:filter([[21, 24], null, null, null])">nights</a>? <a href="https://github.com/square/crossfilter/tree/gh-pages">Fork this example</a> and try your own data! -->
 
+<p><input id="inputSearch" placeholder="Search...">
+<input id="repurl" type="checkbox" class="fuse-checkbox">
+<label for="repurl">Repository url</label></p>
+
+<p><input id="replanguage" type="checkbox" checked="true" class="fuse-checkbox">
+<label for="replanguage">Repository language</label></p>
+
+<p><input id="case" type="checkbox" class="fuse-checkbox">
+<label for="case">Case sensitive</label></p>
+
+
+<p>The results are sorted by score. That is, the ones that match the strongest are first.</p>
+
+<ul id="results">
+</ul>
+
 <div id="charts">
   <div id="hour-chart" class="chart">
     <div class="title">Time of Day</div>
@@ -210,6 +226,13 @@ aside {
 
 <script src="crossfilter.min.js"></script>
 <script src="d3.min.js"></script>
+
+ <script type="text/javascript" src="./Search/Fuse.js   K. Risk - JavaScript Refined_files/jquery.min.js"></script>
+  
+    <script type="text/javascript" src="./Search/Fuse.js   K. Risk - JavaScript Refined_files/fuse.min.js"></script>
+  
+    <script type="text/javascript" src="./Search/Fuse.js   K. Risk - JavaScript Refined_files/fuse.js"></script>
+
 <script>
 
 // (It's CSV, but GitHub Pages only gzip's JSON at the moment.)
@@ -327,8 +350,95 @@ d3.csv("results-20140806-225139.csv", function(error, flights) {
     d3.select(this).call(method);
   }
 
+  function fuse1(data){
+		function start(books) {
+    var $inputSearch = $('#inputSearch'),
+        $result = $('#results'),
+
+        $rurlCheckbox = $('#repurl'),
+        $rplCheckbox = $('#replanguage'),
+        $caseCheckbox = $('#case'),
+
+        searchURL = false,
+        searchPL = true,
+        isCaseSensitive = false,
+
+        fuse;
+
+    function search() {
+      var r = fuse.search($inputSearch.val());
+	  console.log("r: "+r);
+      $result.empty();
+      $.each(r, function() {
+        $result.append('<li class="result-item">' + this.repository_url + ', <span>' + this.repository_language + '</span></li>');
+      });
+    }
+
+    function createFuse() {
+      var keys = [];
+      if (searchURL) {
+        keys.push('repository_url');
+      }
+      if (searchPL) {
+	  console.log("repository_url cheked!");
+        keys.push('repository_language');
+      }
+      fuse = new Fuse(books, {
+        keys: keys,
+        caseSensitive: isCaseSensitive
+      });
+    }
+
+    function onRurlCheckboxChanged() {
+      searchURL= $rurlCheckbox.prop('checked');
+      createFuse();
+      search();
+    }
+
+    function onRplCheckboxChanged() {
+      searchPL = $rplCheckbox.prop('checked');
+      createFuse();
+      search();
+    }
+
+    function onCaseCheckboxChanged() {
+      isCaseSensitive = $caseCheckbox.prop('checked');
+      createFuse();
+      search();
+    }
+
+    $rurlCheckbox.on('change', onRurlCheckboxChanged);
+    $rplCheckbox.on('change', onRplCheckboxChanged);
+    $caseCheckbox.on('change', onCaseCheckboxChanged);
+
+    $inputSearch.on('keyup', search);
+
+    createFuse();
+  }
+
+ // $.getJSON('../data/github.json', function(data) {
+	console.log(data);
+     start(data);
+  }
+  
   // Whenever the brush moves, re-rendering everything.
   function renderAll() {
+  //console.log(flights[1].repository_url);
+   console.log(nestByDate.entries(date.top(40)));
+  console.log(nestByDate.entries(date.top(40))[1].values[0].repository_url);
+  console.log(nestByDate.entries(date.top(40)).length);
+  console.log(nestByDate.entries(date.top(40))[0].values.length);
+  var conData=[];
+  for (i = 0; i < nestByDate.entries(date.top(40)).length; i++) { 
+	for(j=0;j<nestByDate.entries(date.top(40))[i].values.length;j++)
+		conData.push(nestByDate.entries(date.top(40))[i].values[j]);
+}
+
+console.log("conData: "+conData);
+console.log("conData size: "+conData.length);
+
+	fuse1(conData);
+	//fuse1(flights);
     chart.each(render);
     list.each(render);
     d3.select("#active").text(formatNumber(all.value()));
