--- a/repositories.html
+++ b/repositories.html
@@ -150,6 +150,31 @@ aside {
   width: 220px;
 }
 
+
+.bar {
+  fill: steelblue;
+}
+
+/*.bar:hover {
+  fill: brown;
+}*/
+
+.axis {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.y.axis path {
+  display: none;
+}
+
+
 </style>
 
 <div id="body">
@@ -409,7 +434,47 @@ var sortedLangCount = langCount.sort(function(a,b) {return b.count-a.count;});
 
 $("#languageCount").empty();
 
-d3.select("#languageCount").selectAll("p").data(sortedLangCount.slice(0,10)).enter().append("p").text(function(d){return d.lang + " " + d.count;});
+// d3.select("#languageCount").selectAll("p").data(sortedLangCount.slice(0,10)).enter().append("p").text(function(d){return d.lang + " " + d.count;});
+
+var languageData = sortedLangCount.slice(0,20).reverse();
+
+var margin = {top: 20, right: 30, bottom: 30, left: 80},
+    width = 300 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
+
+var y = d3.scale.ordinal()
+    .rangeRoundBands([height, 0], .1);
+
+var x = d3.scale.linear()
+    .range([0, width]);
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left");
+
+y.domain(languageData.map(function(d) { return d.lang; }));
+x.domain([0, d3.max(languageData, function(d) { return d.count; })]);
+
+var svg = d3.select("#languageCount").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .attr("transform", "translate(0, 0)")
+      .call(yAxis);
+
+  svg.selectAll(".bar")
+      .data(languageData)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("y", function(d) { return y(d.lang); })
+      .attr("height", y.rangeBand())
+      .attr("x", function(d) { return 0; })
+      .attr("width", function(d) { return x(d.count); });
+
 
 	fuse.list=workingData;
     chart.each(render);
