Add filter button for year 2012 as example for filters

--- a/repositories.html
+++ b/repositories.html
@@ -205,6 +205,7 @@ aside {
 <p><input id="case" type="checkbox" class="fuse-checkbox">
 <label for="case">Case sensitive</label></p> -->
 
+<a href="javascript:filter([null, null, null, null, null,[new Date(2012, 0, 1), new Date(2013, 0, 1)]])">Year 2012</a>
 
 <p>The results are sorted by score. That is, the ones that match the strongest are first.</p>
 
