--- a/repositories.html
+++ b/repositories.html
@@ -115,7 +115,7 @@ h1, h2 {
 
 #git-list .date,
 #git-list .day {
-  margin-bottom: .4em;
+  
 }
 
 #git-list.date .githeader{
@@ -147,8 +147,9 @@ width:940px;
 }
 #git-list .flight .proglang{
   display: inline-block;
-  width: 150px;
-  margin-left: 20px;
+  width: 100px;
+  margin-left: 40px;
+  text-align: left;
 }
 
 #git-list .flight .giturl{
@@ -158,7 +159,8 @@ width:940px;
 
 #gl{
 height: 30px;
-font-size: 18px;
+font-size: 14px;
+width: 940px;
 display: inline-block;
 }
 
@@ -204,6 +206,55 @@ aside {
   display: none;
 }
 
+
+.oneline {
+ width: 80px;
+ height: 30px;
+ display: inline-block;
+ text-align: right;
+}
+
+.hiss {
+ width: 80px;
+ height: 30px;
+ display: inline-block;
+ text-align: right;
+}
+
+.hsize {
+ width: 70px;
+ height: 30px;
+ display: inline-block;
+ text-align: right;
+}
+
+.hw {
+ width: 75px;
+ height: 30px;
+ display: inline-block;
+ text-align: right;
+}
+
+.hpl {
+ width: 75px;
+ height: 30px;
+ display: inline-block;
+ text-align: right;
+}
+
+
+.hdate {
+ width: 150px;
+ height: 30px;
+ display: inline-block;
+ text-align: left;
+}
+
+.hrn {
+ width: 300px;
+ height: 30px;
+ display: inline-block;
+}
 
 </style>
 
@@ -271,8 +322,33 @@ aside {
 </div>
 
 <div id="gl">
-<div class="time" style="text-align: left;">Creation date </div> 
-<div class="giturl" >Repository name</div>
+<div class="hdate">
+<p>Creation date</p>
+</div>
+ 
+<div class="hrn">
+<p>Repository name</p>
+</div>
+ 
+<div class="oneline">
+<p>forks</p>
+</div>
+<div class="hsize">
+<p>size</p>
+</div>
+
+<div class="hiss">
+<p>issues</p>
+</div>
+
+<div class="hw">
+<p>watchers</p>
+</div>
+
+<div class="hpl">
+<p>language</p>
+</div>
+
 </div>
 
 <div id="lists">
@@ -551,7 +627,8 @@ function parseDate(d) {
       var date = d3.select(this).selectAll(".date")
           .data(flightsByDate, function(d) { return d.key; });
 
-      date.enter().append("div");
+      date.enter().append("div")
+          .attr("class", "date")
 
       date.exit().remove();
 
