--- a/repositories.html
+++ b/repositories.html
@@ -51,6 +51,7 @@ h1, h2 {
 
 #charts {
   padding: 10px 0;
+  width: 860px;
 }
 
 .chart {
@@ -97,11 +98,23 @@ h1, h2 {
   width: 260px;
 }
 
-#delay-chart {
+/*#delay-chart {
   width: 230px;
+}*/
+
+#size-chart {
+  width: 420px;
 }
 
-#distance-chart {
+#forks-chart {
+  width: 200px;
+}
+
+#issues-chart {
+  width: 220px;
+}
+
+#watchers-chart {
   width: 420px;
 }
 
@@ -162,6 +175,11 @@ height: 30px;
 font-size: 14px;
 width: 940px;
 display: inline-block;
+}
+
+#results > div{
+  display: inline-block;
+  vertical-align: top;
 }
 
 #git-list div.distance,
@@ -268,6 +286,8 @@ aside {
 
 <p>Gitsift is a visualization of GitHub public timeline data using D3 and Crossfilter. Most of the code is blatantly copied from Crossfilter's official <a href="https://github.com/square/crossfilter">example</a>. Everybody has to start somewhere. Definition of sift from <a href="http://www.merriam-webster.com/dictionary/sift">Merriam-Webster</a>: <i>"to go through (something) very carefully in order to find something useful or valuable"</i>. For more information on how to retrieve data from <a href="https://developers.google.com/bigquery/">Google BigQuery</a> read our <a href="https://github.com/matijapiskorec/gitsift">README</a>.</p>
 
+<p>This is an example of selecting only <a href="javascript:filter([null, null, null, null, null,[new Date(2012, 0, 1), new Date(2013, 0, 1)]])">year 2012</a>.</p>
+
 <!-- <p><b>Crossfilter</b> is a <a href="https://github.com/square/crossfilter">JavaScript library</a> for exploring large multivariate datasets in the browser. Crossfilter supports extremely fast (&lt;30ms) interaction with coordinated views, even with datasets containing a million or more records; we built it to power analytics for <a href="https://squareup.com/register">Square Register</a>, allowing merchants to slice and dice their payment history fluidly.
 
 <p>Since most interactions only involve a single dimension, and then only small adjustments are made to the filter values, incremental filtering and reducing is significantly faster than starting from scratch. Crossfilter uses sorted indexes (and a few bit-twiddling hacks) to make this possible, dramatically increasing the perfor&shy;mance of live histograms and top-<i>K</i> lists. For more details on how Crossfilter works, see the <a href="https://github.com/square/crossfilter/wiki/API-Reference">API reference</a>.
@@ -278,37 +298,20 @@ aside {
 
 <p>Some questions to consider: How does time-of-day correlate with <a href="javascript:filter([null, [100, 150], null, null])">arrival delay</a>? Are <a href="javascript:filter([null, null, [1700, 2000], null])">longer</a> or <a href="javascript:filter([null, null, [0, 300], null])">shorter</a> flights more likely to arrive early? What happened on <a href="javascript:filter([null, [80, 150], null, [new Date(2001, 0, 12), new Date(2001, 0, 13)]])">January 12</a>? How do flight patterns differ between <a href="javascript:filter([null, null, null, [new Date(2001, 0, 27), new Date(2001, 0, 29)]])">weekends</a> and <a href="javascript:filter([null, null, null, [new Date(2001, 0, 29), new Date(2001, 1, 3)]])">weekdays</a>, or <a href="javascript:filter([[4, 7], null, null, null])">mornings</a> and <a href="javascript:filter([[21, 24], null, null, null])">nights</a>? <a href="https://github.com/square/crossfilter/tree/gh-pages">Fork this example</a> and try your own data! -->
 
-<p><input id="inputSearch" placeholder="Search...">
-<!-- <input id="repurl" type="checkbox" class="fuse-checkbox">
-<label for="repurl">Repository url</label></p>
-
-<p><input id="replanguage" type="checkbox" checked="true" class="fuse-checkbox">
-<label for="replanguage">Repository language</label></p>
-
-<p><input id="case" type="checkbox" class="fuse-checkbox">
-<label for="case">Case sensitive</label></p> -->
-
-<a href="javascript:filter([null, null, null, null, null,[new Date(2012, 0, 1), new Date(2013, 0, 1)]])">Year 2012</a>
-
-<p>The results are sorted by score. That is, the ones that match the strongest are first.</p>
-
-<ul id="results">
-</ul>
-
 <div id="charts">
   <div id="hour-chart" class="chart">
     <div class="title">Time of Day</div>
   </div>
-  <div id="distance-chart" class="chart">
-    <div class="title">Forks</div>
-  </div>
-    <div id="distance-chart" class="chart">
+  <div id="size-chart" class="chart">
     <div class="title">Repository size</div>
   </div>
-    <div id="distance-chart" class="chart">
+  <div id="forks-chart" class="chart">
+    <div class="title">Forks</div>
+  </div>
+  <div id="issues-chart" class="chart">
     <div class="title">Issues</div>
   </div>
-    <div id="distance-chart" class="chart">
+  <div id="watchers-chart" class="chart">
     <div class="title">Watchers</div>
   </div>
   <div id="date-chart" class="chart">
@@ -318,7 +321,27 @@ aside {
 
 <aside id="totals"><span id="active">-</span> of <span id="total">-</span> repositories selected.</aside>
 
-<div id="languageCount">
+<div id="results">
+
+  <div>
+    <div class="title">Most popular languages</div>
+    <div id="languageCount">
+    </div>
+  </div>
+
+  <div>
+    <div class="title">Search repositories</div>
+    <p><input id="inputSearch" placeholder="Search...">
+    <p>The results are sorted by score. That is, the ones that match the strongest are first.</p>
+
+<!--     <ul id="searchResults">
+    </ul>
+ -->
+    <div id="searchResults">
+    </div>
+
+  </div>
+
 </div>
 
 <div id="gl">
@@ -412,16 +435,16 @@ d3.csv("repositories_data_44k_short.csv", function(error, flights) {
       hours = hour.group(Math.floor),
 
       fork = flight.dimension(function(d) { return d.forks; }),
-      forks = fork.group(function(d) { return Math.floor(d / 20) * 20; }),
+      forks = fork.group(function(d) { return Math.floor(d / 25) * 25; }),
 
       repo_size = flight.dimension(function(d) { return d.repo_size; }),
       repo_sizes = repo_size.group(function(d) { return Math.floor(d / 50) * 50; }),
 
       issue = flight.dimension(function(d) { return d.issues; }),
-      issues = issue.group(function(d) { return Math.floor(d / 10) * 10; }),
+      issues = issue.group(function(d) { return Math.floor(d / 5) * 5; }),
       
       watcher = flight.dimension(function(d) { return d.watchers; }),
-      watchers = watcher.group(function(d) { return Math.floor(d / 50) * 50; });
+      watchers = watcher.group(function(d) { return Math.floor(d / 25) * 25; });
 
   var charts = [
 
@@ -433,31 +456,31 @@ d3.csv("repositories_data_44k_short.csv", function(error, flights) {
         .rangeRound([0, 10 * 24])),
 
     barChart()
-        .dimension(fork)
-        .group(forks)
-      .x(d3.scale.linear()
-        .domain([0, 400])
-        .rangeRound([0, 10 * 20])),
-
-    barChart()
         .dimension(repo_size)
         .group(repo_sizes)
       .x(d3.scale.linear()
         .domain([0, 2000])
         .rangeRound([0, 10 * 40])),
 
+    barChart()
+        .dimension(fork)
+        .group(forks)
+      .x(d3.scale.linear()
+        .domain([0, 400])
+        .rangeRound([0, 10 * 16])),
+
      barChart()
         .dimension(issue)
         .group(issues)
       .x(d3.scale.linear()
-        .domain([0, 200])
+        .domain([0, 100])
         .rangeRound([0, 10 * 20])),
 
      barChart()
         .dimension(watcher)
         .group(watchers)
       .x(d3.scale.linear()
-        .domain([0, 2000])
+        .domain([0, 1000])
         .rangeRound([0, 10 * 40])),
 
     barChart()
@@ -466,7 +489,7 @@ d3.csv("repositories_data_44k_short.csv", function(error, flights) {
         .round(d3.time.day.round)
       .x(d3.time.scale()
         .domain([new Date(2008, 0, 1), new Date(2014, 7, 1)])
-        .rangeRound([0, 10 * 90]))
+        .rangeRound([0, 12 * 68]))
         .filter([new Date(2008, 0, 1), new Date(2014, 7, 1)])
 
   ];
@@ -511,16 +534,17 @@ d3.csv("repositories_data_44k_short.csv", function(error, flights) {
   
   
   function search2(e) {
-   $result = $('#results');
-      if (e.keyCode === 13) {
-	   console.log("fuse...");
+   $result = $('#searchResults');
+      // if (e.keyCode === 13) {
+	   // console.log("fuse...");
       var r = fuse.search($inputSearch.val());
 	  // console.log("r: "+r);
       $result.empty();
-      $.each(r.slice(0,10), function() {
-        $result.append('<li class="result-item">' + this.repository_url + ', <span>' + this.repository_language + '</span></li>');
+      $.each(r.slice(0,15), function() {
+        // $result.append('<li class="result-item">' + this.repository_url + ', <span>' + this.repository_language + '</span></li>');
+        $result.append('<div>' + this.repository_url + ', ' + this.repository_language + '</div>');
       });
-    }
+    // }
   }
   
    var $inputSearch = $('#inputSearch');
@@ -547,12 +571,13 @@ var langCount = flightsByLang.map(function(d) {return {"lang": d.key, "count":d.
 var sortedLangCount = langCount.sort(function(a,b) {return b.count-a.count;});
 
 $("#languageCount").empty();
+// $("#languageCount").append( "<div>Most popular languages</div>" );
 
 // d3.select("#languageCount").selectAll("p").data(sortedLangCount.slice(0,10)).enter().append("p").text(function(d){return d.lang + " " + d.count;});
 
 var languageData = sortedLangCount.slice(0,20).reverse();
 
-var margin = {top: 20, right: 30, bottom: 30, left: 80},
+var margin = {top: 5, right: 30, bottom: 5, left: 80},
     width = 300 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
 
